Support Jakarta EE namespaces
This change facilitates the usage of libraries that were formerly part
of Java EE. The project is now owned by Eclipse and the classes have
been moved under the Jakarta namespace due to licensing issues. This
primarily affects the scim2-sdk-client component. All "javax"
references in the SCIM SDK have now been replaced with "jakarta".

Since the Jakarta namespace update was released for use with JDK 9, the
SCIM SDK cannot be compiled with JDK 8 anymore. Thus, the project will
drop support for Java 8 in the next release and will be compiled with
JDK 11. Due to these major changes (Java support and namespace
changes), the release version has been bumped to 3.0.0.

Reviewer: vyhhuang
Reviewer: dougbulkley

JiraIssue: DS-46954